--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>19</source>
-                    <target>19</target>
+                    <source>18</source>
+                    <target>18</target>
                     <compilerArgs>
                         <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
                         <arg>--add-opens=java.base/java.nio=ALL-UNNAMED</arg>
@@ -23,6 +23,12 @@
         </plugins>
     </build>
     <dependencies>
+        <!-- Dependency for GnuPG -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpg-jdk15on</artifactId>
+            <version>1.68</version>
+        </dependency>
         <!-- Dependency for SQLite -->
         <dependency>
             <groupId>org.xerial</groupId>
@@ -62,11 +68,6 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcpg-jdk15on</artifactId>
-            <version>1.68</version>
         </dependency>
     </dependencies>
     <profiles>
