--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,11 @@
             <artifactId>bcprov-jdk15on</artifactId>
             <version>1.68</version>
         </dependency>
-
+        <dependency>
+            <groupId>name.neuhalfen.projects.crypto.bouncycastle.openpgp</groupId>
+            <artifactId>bouncy-gpg</artifactId>
+            <version>2.3.0</version>
+        </dependency>
         <!-- Dependency for SQLite -->
         <dependency>
             <groupId>org.xerial</groupId>
